# django-icv-taxonomy

./: CHANGELOG.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
src/icv_taxonomy/: __init__.py
src/icv_taxonomy/migrations/: 0001_squashed_0003_alter_term_vocabulary_alter_termassociation_term_and_more.py  0003_alter_term_vocabulary_alter_termassociation_term_and_more.py
tests/: settings_migrate_defaults.py  test_migrations_defaults.py
